Fix window sizing issues.